# mcp-workspace-tools

./: .gitignore  .mcpbignore  CLAUDE.md  Makefile  README.md  manifest.json  pyproject.toml  server.json
.github/workflows/: build-bundle.yml  ci.yaml
e2e/: conftest.py  test_e2e_mcpb.py
scripts/: build-bundle.sh
src/mcp_workspace_tools/: SKILL.md  git_ops.py  index_query.py  server.py
tests/: test_git_ops.py  test_index_query.py  test_server.py
