[project]
name = "mcp-workspace-tools"
version = "0.1.1"
description = "Git-backed workspace tools for AI agents: file ops, commits, search, and skill validation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    { name = "NimbleBrain Inc", email = "hello@nimblebrain.ai" },
]
keywords = ["mcp", "workspace", "git", "files", "nimblebrain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.14.0",
    "pydantic>=2.0.0",
    "pygit2>=1.15.0",
    "pyyaml>=6.0.2",
    "jsonschema>=4.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_workspace_tools"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long - handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "mcp>=1.3.2",
    "ty>=0.0.1a7",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.13.1",
]
e2e = [
    "mcp>=1.3.2",
    "testcontainers>=4.9.0",
    "requests>=2.32.0",
    "pytest-httpserver>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/NimbleBrainInc/mcp-workspace-tools"
Repository = "https://github.com/NimbleBrainInc/mcp-workspace-tools.git"
Issues = "https://github.com/NimbleBrainInc/mcp-workspace-tools/issues"
